--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -59,7 +59,7 @@ jobs:
           haxelib install flixel 5.5.0
           haxelib install flixel-tools 1.5.1
           haxelib install flixel-ui 2.5.0
-          haxelib install flixel-addons 3.0.2
+          haxelib install flixel-addons
           haxelib install tjson 1.4.0
           haxelib install hxCodec 2.6.0
           haxelib install SScript 8.1.6
