--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -55,11 +55,11 @@ jobs:
           haxelib install hxcpp > /dev/null
           haxelib install hxcpp-debug-server
           haxelib install lime 7.9.0
-          haxelib install openfl 9.1.0
+          haxelib install openfl 9.2.0
           haxelib install flixel 5.5.0
           haxelib install flixel-tools 1.5.1
           haxelib install flixel-ui 2.5.0
-          haxelib install flixel-addons
+          haxelib install flixel-addons 3.0.2
           haxelib install tjson 1.4.0
           haxelib install hxCodec 2.6.0
           haxelib install SScript 8.1.6
