--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -54,19 +54,18 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install hxcpp > /dev/null
           haxelib install hxcpp-debug-server
-          haxelib install lime 7.9.0
-          haxelib install openfl 9.2.0
+          haxelib install lime 8.0.1
+          haxelib install openfl 9.3.2
           haxelib install flixel 5.5.0
           haxelib install flixel-tools 1.5.1
           haxelib install flixel-ui 2.5.0
-          haxelib install flixel-addons 3.0.2
+          haxelib install flixel-addons 3.2.1
           haxelib install tjson 1.4.0
           haxelib install hxCodec 2.6.0
-          haxelib install SScript 8.1.6
+          haxelib install SScript 7.7.0
           haxelib install hscript 2.5.0
-          haxelib install hxCodec 2.6.0
           haxelib git hxdiscord_rpc https://github.com/MAJigsaw77/hxdiscord_rpc
-          haxelib git flxanimate https://github.com/beihu235/flxanimate
+          haxelib git flxanimate https://github.com/ShadowMario/flxanimate dev
           haxelib git linc_luajit https://github.com/superpowers04/linc_luajit
           haxelib git extension-androidtools https://github.com/MaysLastPlay77/extension-androidtools
           haxelib git extension-orientation https://github.com/HaxeExtension/extension-orientation.git
